--- a/application-config.properties
+++ b/application-config.properties
@@ -8,3 +8,4 @@ spring.jpa.show-sql=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
