--- a/application-config.properties
+++ b/application-config.properties
@@ -1,11 +1,9 @@
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
+#eureka.client.registerWithEureka=true
+#eureka.client.fetchRegistry=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.instance.hostname=localhost
